--- a/app/views/applicants/new.html.haml
+++ b/app/views/applicants/new.html.haml
@@ -1,1 +1,32 @@
-hey
+.panel.panel-default
+  .panel-body
+    = form_for @applicant, url: applicants_path, method: :post do |f|
+      .form-group
+        .row
+          .col-sm-6
+            %label First Name
+            = f.text_field :first_name, class: 'form-control', placeholder: 'Insta'
+          .col-sm-6
+            %label Last Name
+            = f.text_field :last_name, class: 'form-control', placeholder: 'Carter'
+      .form-group
+        .row
+          .col-sm-6
+            %label Email
+            = f.text_field :email, class: 'form-control', placeholder: 'e@mail.com'
+          .col-sm-6
+            %label Region
+            = select_tag :region, options_for_select(Applicant::REGIONS, @applicant.region), class: 'form-control'
+      .form-group
+        .row
+          .col-sm-6
+            %label Phone Number
+            = f.text_field :phone, class: 'form-control', placeholder: 'e@mail.com'
+          .col-sm-6
+            %label Phone Type
+            = select_tag :phone_type, options_for_select(Applicant::PHONE_TYPES, @applicant.region), class: 'form-control'
+
+      .form-group
+        .row
+          .col-sm-12
+            = f.submit 'Submit Application', class: 'btn btn-block btn-success btn-lg'
