finish applicant CRUD and markup for workflow states

--- a/app/views/applicants/show.html.haml
+++ b/app/views/applicants/show.html.haml
@@ -7,5 +7,6 @@
       = @applicant.phone
     %p
       = @applicant.region
+    %p
+      = link_to 'edit', edit_applicant_path(@applicant)
 
-=@applicant.inspect
