started again, button copy change

--- a/app/views/applicants/new.html.haml
+++ b/app/views/applicants/new.html.haml
@@ -7,4 +7,4 @@
       .form-group
         .row
           .col-sm-12
-            = f.submit 'Submit Application', class: 'btn btn-block btn-success btn-lg'
+            = f.submit 'Apply Now', class: 'btn btn-block btn-success btn-lg'
